force-app/main/default/objects/leankor__TimeSheet__c/leankor__TimeSheet__c.object-meta.xml
<CustomObject>
    <description>Time sheet entries.</description>
    <label>Time Sheet</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>