force-app/main/default/objects/leankor__TimeSheet__c/fields/leankor__ApprovalHistoryStatus__c.field-meta.xml
<CustomField>
    <fullName>leankor__ApprovalHistoryStatus__c</fullName>
    <description>Approval status of the timesheet.</description>
    <label>Approval History Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>