force-app/main/default/objects/leankor__TimeSheet__c/fields/leankor__EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__EndDateTime__c</fullName>
    <description>The last datetime the time sheet covers.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the last datetime of the time sheet.</inlineHelpText>
    <label>End Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>