force-app/main/default/objects/leankor__TimeSheet__c/fields/leankor__Resource__c.field-meta.xml
<CustomField>
    <fullName>leankor__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resource whose time is being tracked with the time sheet.</description>
    <label>Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserTimeSheets</relationshipName>
    <type>Lookup</type>
</CustomField>