force-app/main/default/objects/leankor__TimeSheet__c/fields/leankor__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDateTime__c</fullName>
    <description>The first datetime the time sheet covers.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the first datetime of the time sheet.</inlineHelpText>
    <label>Start Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>